fixed book content height issues & overflow

--- a/src/app/components/Book-Page-Content/Book-Page-Content.module.scss
+++ b/src/app/components/Book-Page-Content/Book-Page-Content.module.scss
@@ -7,6 +7,7 @@
   margin-top: 1rem;
   font-family: 'SF', sans-serif;
   letter-spacing: .2px;
+  overflow: hidden;
 
   @media (min-width: 1200px) {
     width: 1140px;
