--- a/src/app/components/Book-Page-Content/Book-Page-Features/Book-Page-Features.module.scss
+++ b/src/app/components/Book-Page-Content/Book-Page-Features/Book-Page-Features.module.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   width: 100%;
   padding-top: 1em;
-  height: 20em;
+  // height: 20em;
 }
 
 .featureContainer {
